--- a/frontend/src/app/meals/create-meal/create-meal.component.css
+++ b/frontend/src/app/meals/create-meal/create-meal.component.css
@@ -1,8 +1,8 @@
 :host {
+  padding-top: 24px;
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100vh;
   background: #fafafa;
 }
 
